# agribot

./: README.md  frames_2026-01-08_02.59.53.gv  frames_2026-01-08_05.51.39.gv  frames_2026-01-08_07.10.25.gv  frames_2026-01-08_07.34.52.gv  frames_2026-01-08_07.56.28.gv  frames_2026-01-08_08.15.41.gv  frames_2026-01-09_02.15.33.gv  frames_2026-01-09_02.20.03.gv  frames_2026-01-09_02.21.35.gv  frames_2026-01-09_03.27.40.gv  frames_2026-01-09_03.55.09.gv  frames_2026-01-09_05.09.15.gv  frames_2026-01-09_05.44.31.gv  frames_2026-01-09_05.45.01.gv  frames_2026-01-09_06.03.24.gv  frames_2026-01-09_08.24.35.gv
install/: local_setup.sh  setup.sh
log/: latest_build
src/: farm_health_report.csv
src/agribot_description/: CMakeLists.txt  package.xml
src/agribot_description/launch/: agribot_spawn.launch.py  master.launch.py
src/agribot_description/urdf/: agribot.urdf.xacro
src/agribot_gazebo/: CMakeLists.txt  package.xml
src/agribot_gazebo/launch/: farm.launch.py
src/agribot_gazebo/worlds/: eth_farm.sdf  ethiopian_farm.sdf  ethiopian_farm_generated.sdf  farm_health_report.csv  generate_farm.py
src/agribot_nav2_bringup/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/agribot_nav2_bringup/agribot_nav2_bringup/: farm_patrol.py
src/agribot_nav2_bringup/launch/: bringup_launch.py
src/agribot_navigation/: setup.cfg  setup.py
src/agribot_navigation/agribot_navigation/: navigation_node.py  navigator_goal.py  safety_stop.py  stop_on_disease.py
src/agribot_navigation/config/: nav2_params.yaml
src/agribot_vision/: setup.cfg  setup.py
(+70 files in other folders)
