<?xml version="1.0"?>
<package format="3">
  <name>agribot_nav2_bringup</name>
  <version>0.0.1</version>
  <description>Nav2 bringup (params) for Agribot</description>
  <maintainer email="you@example.com">you</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>nav2_bringup</exec_depend>
  <exec_depend>rclpy</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

